# elarocks

./: .gitignore  Cargo.toml  README.md
db/: IDENTITY  LOG  LOG.old.1691426058026816  LOG.old.1691426145104694  LOG.old.1691426247748818  LOG.old.1691426381486422  LOG.old.1691426389472490  LOG.old.1691426539929367  LOG.old.1691426596320449  LOG.old.1691426633511164  LOG.old.1691426675625262  MANIFEST-000042
graphql/: db.js  fetchData.js  index.js  package.json  query.graphql  repairdb.js
graphql/query/: postgres.sql  query.graphql
graphql/schema/: resolvers.js  typeDefs.js
graphql/src/: fetchData.js  index.js
graphql/src/etc/: repairdb.js
graphql/src/schema/: resolvers.js  typeDefs.js  unionResolvers.js
graphql/src/test/: db.js  fetchData.js  resolvers.js  test.js
nano_db/: 000008.sst  000022.sst  IDENTITY  LOG  LOG.old.1703391335511872  LOG.old.1703391338504965  LOG.old.1703391343729471  LOG.old.1703391365465816  MANIFEST-000024
src/: config.rs  env.rs  events.rs  main copy.rs  main.rs  main11.rs  main13.rs  main14.rs  main15.rs  main17.rs  main2.rs  main22.rs  main23.rs  main25.rs  main26.rs  main3.rs  main5.rs  main7.rs  main_bak.rs  merge_main.rs  rocks.rs  select.rs
src/byEvents/: main1.rs  main11.rs  main13.rs  main14.rs  main15.rs  main17.rs  main2.rs  main22.rs  main23.rs  main25.rs  main26.rs  main3.rs  main5.rs  main7.rs  main_byEvents.rs  mod.rs
src/envs/: byEventsEnv.rs  env.rs  implements.rs  mod.rs
src/event/: events.rs
src/events/: implement.rs
src/ground/: rocks.rs  select.rs
src/rocks/: mod.rs  rocks.rs  select.rs  select_nano.rs
src/struct/: eventOne.rs  events.rs  mod.rs
src/structs/: detectEvent.rs  eventTypes.rs  events.rs  mod.rs
webapp/: package.json  tsconfig.json
webapp/app/: page.tsx
webapp/app/api/: route.ts
webapp/app/components/: pagination.tsx  searchArea.tsx  types.ts
webapp/app/details/networks/: page.tsx
webapp/pages/api/gql/: index.ts
